tests/expectations/compiler/statements/loop_returns_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372026]: Loop body contains a return statement or always returns.
    --> compiler-test:6:9
     |
   6 |         for i: u32 in 0u32..9u32 {
   7 |             return false;
   8 |         }
     |         ^
     |
     = Remove the code in the loop body that always returns.
Error [ETYC0372026]: Loop body contains a return statement or always returns.
    --> compiler-test:10:9
     |
  10 |         for i: u32 in 0u32..9u32 {
  11 |             if (x == 0u32) {
  12 |                 return false;
  13 |             } else {
  14 |                 return true;
  15 |             }
  16 |         }
     |         ^
     |
     = Remove the code in the loop body that always returns.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
